# siglent_emulator

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: formatter.yml  mypy.yml  pylint.yml  tests.yml  unittest.yml
examples/: siglent_device.py  test_siglent_device.py
src/: siglent_emulator_verifier.py
src/emulator/: emulator.py
src/siglent_client/: client.py
src/siglent_emulator/: client.py  emulator.py
src/siglent_emulator/function_generator/: sdg1000x_series.py  sdg1032x.py  sdg1062x.py  sdg_common.py  sdg_series.py  util.py
tests/client/: test_placeholder.py
tests/emulator/: siglent_emulator_verifier.py  test_emulator.py  test_placeholder.py  test_sdg1032x.py  test_util.py
tests/examples/: siglent_device.py  test_siglent_device.py
