[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siglent_emulator"
version = "0.0.1"
authors = [
  { name="Boundless Science", email="author@example.com" },
]
description = "A software emulator for Siglent devices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/siglent_emulator"
"Bug Tracker" = "https://github.com/BoundlessScience/siglent_emulator/issues"
