[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "siglent_emulator"
version = "0.0.1"
authors = [
  { name="Boundless Science", email="author@example.com" },
]
description = "A software emulator for Siglent devices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/siglent_emulator"
"Bug Tracker" = "https://github.com/BoundlessScience/siglent_emulator/issues"

[tool.setuptools.package-data]
"*" = ["py.typed"]
