[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "siglent_emulator"
version = "0.0.1"
authors = [
  { name="The SEmulator Project", email="author@example.com" },
]
description = "A software emulator for Siglent devices"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/siglent_emulator"
"Bug Tracker" = "https://github.com/erikbryant/siglent_emulator/issues"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
local_partial_types = true
strict_concatenate = true
strict_equality = true
strict = true
